; ModuleID = '/home/carl/AnghaBench/systemd/src/libudev/extr_libudev-monitor.c_monitor_netlink_group_from_string.c'
source_filename = "/home/carl/AnghaBench/systemd/src/libudev/extr_libudev-monitor.c_monitor_netlink_group_from_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MONITOR_GROUP_NONE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"udev\00", align 1
@MONITOR_GROUP_UDEV = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [7 x i8] c"kernel\00", align 1
@MONITOR_GROUP_KERNEL = common dso_local global i32 0, align 4
@_MONITOR_NETLINK_GROUP_INVALID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @monitor_netlink_group_from_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @monitor_netlink_group_from_string(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = icmp ne i8* %4, null
  br i1 %5, label %8, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* @MONITOR_GROUP_NONE, align 4
  store i32 %7, i32* %2, align 4
  br label %22

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = call i64 @streq(i8* %9, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %8
  %13 = load i32, i32* @MONITOR_GROUP_UDEV, align 4
  store i32 %13, i32* %2, align 4
  br label %22

14:                                               ; preds = %8
  %15 = load i8*, i8** %3, align 8
  %16 = call i64 @streq(i8* %15, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %14
  %19 = load i32, i32* @MONITOR_GROUP_KERNEL, align 4
  store i32 %19, i32* %2, align 4
  br label %22

20:                                               ; preds = %14
  %21 = load i32, i32* @_MONITOR_NETLINK_GROUP_INVALID, align 4
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %20, %18, %12, %6
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i64 @streq(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
